--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -84,11 +84,9 @@
 			}
 		},
 		"resources": {
-			"css": [
-				{
-					"uri": "css/style.css"
-				}
-			]
+			"css": [{
+				"uri": "css/style.css"
+			}]
 		},
 		"routing": {
 			"config": {
@@ -100,33 +98,23 @@
 				"controlId": "app",
 				"clearControlAggregation": false
 			},
-			"routes": [
-				{
-					"name": "RouteApp",
-					"pattern": "RouteApp",
-					"target": [
-						"TargetApp"
-					]
-				},
-				{
-					"name": "Main",
-					"pattern": "",
-					"titleTarget": "",
-					"greedy": false,
-					"target": [
-						"Main"
-					]
-				},
-				{
-					"name": "Customer",
-					"pattern": "customer",
-					"titleTarget": "",
-					"greedy": false,
-					"target": [
-						"Customer"
-					]
-				}
-			],
+			"routes": [{
+				"name": "RouteApp",
+				"pattern": "RouteApp",
+				"target": ["TargetApp"]
+			}, {
+				"name": "Main",
+				"pattern": "",
+				"titleTarget": "",
+				"greedy": false,
+				"target": ["Main"]
+			}, {
+				"name": "Customer",
+				"pattern": "customer/{customerid}",
+				"titleTarget": "",
+				"greedy": false,
+				"target": ["Customer"]
+			}],
 			"targets": {
 				"TargetApp": {
 					"viewType": "XML",
