--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -76,7 +76,7 @@
 				"type": "sap.ui.model.odata.v2.ODataModel",
 				"settings": {
 					"defaultOperationMode": "Server",
-					"defaultBindingMode": "OneWay",
+					"defaultBindingMode": "TwoWay",
 					"defaultCountMode": "Request"
 				},
 				"dataSource": "ZHOUI5_CUSTOMER_SRV",
